--- a/pipelines.yml
+++ b/pipelines.yml
@@ -5,7 +5,8 @@ resources:
   {{ range $i, $e := until 100 }}
   - name: git{{$i}}
     type: GitRepo
-    path: bharath92/test-repo
+    configuration:
+      path: bharath92/test-repo
       gitProvider: github
       branch:
         include: {{gitBranch}}
