--- a/pipelines.yml
+++ b/pipelines.yml
@@ -7,7 +7,7 @@ resources:
     type: GitRepo
     configuration:
       path: aarvyved/test-repo
-      gitProvider: github
+      gitProvider: gitIntegration
       branches:
         include: {{gitBranch}}
   {{ end }}
